Bug 83134 - networkd: .network file without a [Match] section probably shouldn't match loopback interface
Summary: networkd: .network file without a [Match] section probably shouldn't match lo...
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Tom Gundersen
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-27 10:23 UTC by mus.svz
Modified: 2014-09-04 12:30 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description mus.svz 2014-08-27 10:23:09 UTC
I'm running systemd 216 and have the following network file in order to get DHCP on my ethernet and my wireless interface (it's a laptop and I'm using wpa_supplicant for the wireless interface):

[Network]
DHCP=v4

Using the new networkctl tool I noticed that the loopback interface was in SETUP "configuring" and networkd is indeed sending DHCP requests on the loopback interface.

I know that this is technically correct since the loopback interface matches because of the missing [Match] section. But imho this is kind of unexpected behaviour, especially since I can't think of a reason why one might want to configure the loopback interface.

Feel free to close this if you don't consider it a bug, but maybe there should at least be a warning in the man page that a missing [Match] section also matches lo.
Comment 1 Tom Gundersen 2014-09-04 09:36:37 UTC
Yeah, we sholud probably skip 'lo'. Checking for IFF_LOOPBACK I guess is the right condition.
Comment 2 Tom Gundersen 2014-09-04 12:30:09 UTC
Fixed now in git.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.