networkd: link - do not manage loopback links

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=83134.